<resources>
    <string name="app_name">Gumshoe</string>
    <string name="series_list">Series List</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="series_name">Enter series name</string>
    <string name="check_connection">Check Connection</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet">no_internet</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="problem_accessing_our_database">Problem accessing our database!</string>
    <string name="please_report_this_issue_by_clicking_the_report_bug_button_in_settings">Try to re-login first but if issue persists\nplease report this issue by clicking the below button or the\n\"Report Bug\" button in Settings.</string>
    <string name="customisation">Customisation</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="alert_delay">Alert Delay</string>
    <string name="time_zone">Time Zone</string>
    <string name="general">General</string>
    <string name="report_bug">Report Bug</string>
    <string name="about">About</string>
    <string name="layout">Layout</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">send</string>
    <string name="remove">Remove</string>
    <string name="hide">Hide</string>
    <string name="reportBugDiscord">To report a bug, you need to join our gumshoe discord server. You can join by clicking the button below.</string>
    <string name="support_devs">Support the developers</string>
    <string name="watch_an_ad">Watch an ad</string>



    <string-array name="layout_drop_down_options">
        <item>List</item>
        <item>Grid</item>
        <item>No Scroll</item>
    </string-array>

    <string-array name="alert_delay_drop_down_options">
        <item>1 day before</item>
        <item>12 hours before</item>
        <item>6 hours before</item>
        <item>1 hour before</item>
        <item>30 min before</item>
        <item>10 min before</item>
        <item>No Delay</item>
        <item>10 min after</item>
        <item>30 min after</item>
        <item>1 hour after</item>
        <item>6 hours after</item>
        <item>12 hours after</item>
        <item>1 day after</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="change_color">Change Color</string>
    <string name="change_notification_reminder">Change Notification Reminder</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
    <string name="go_back">Go Back</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="alphabetical_up">Alphabetical ↑</string>
    <string name="alphabetical_down">Alphabetical ↓</string>
    <string name="favourite_up">Favourite ↑</string>
    <string name="favourite_down">Favourite ↓</string>
    <string name="favourite">Favourite</string>
    <string name="turn_notifications_off">Turn Notifications Off</string>
    <string name="expand_or_collapse">Expand or Collapse</string>
    <string name="show">show</string>
    <string name="trailer">Trailer:</string>
    <string name="air_date_up">Air Date ↑</string>
    <string name="air_date_down">Air Date ↓</string>
    <string name="add_date_up">Date Added to List ↑</string>
    <string name="add_date_down">Date Added to List ↓</string>
    <string name="loading_3_dots">Loading…</string>
    <string name="login">Login</string>
    <string name="change_air_date">Change\nAir Date</string>
    <string name="change_time_zone">Change\nTime Zone</string>
    <string name="time_zone_change">Change Time Zone</string>
    <string name="_30">30</string>
    <string name="_45">45</string>
    <string name="this_is_the_time_zone_we_identified_for_your_region">This is the Time Zone we identified for your region:</string>
    <string name="meaning_the_time_in_your_region_is">Meaning the time in your region is:</string>
    <string name="is_this_correct">Is this correct?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_specify_your_new_time_zone">Please specify your new Time Zone:</string>
    <string name="sign_positive_or_negative">Sign (positive or negative):</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="meaning_the_new_time_in_your_region_is">Meaning the time when you entered this screen is:</string>
    <string name="save_suggestion">Tap the save icon on the bottom right to save changes. If the button is missing, it means there is some error with your inputs.</string>

    <string name="change_air_date_question">Is our air date above the same as the air date provided by the external sources?</string>
    <string name="wrong_air_date_explanation">We unfortunately rely on an API to tell us when a series airs. When the API is wrong only your feedback and changes can help. Please check your series’ air data using either one of the below release calendars and fill in the changes you want to apply to the current air date, if it is incorrect.</string>
    <string name="logo_explanation">Click on any of the logos to open their release calendars</string>
    <string name="logo_copyright_explanation">We do not own any of the above logos, we are simply recommending their services.</string>
    <string name="air_date_changes_instructions">Please specify the changes you want to make to the air date</string>
    <string name="error_wrong_air_date">Error: wrong air date</string>
    <string name="would_you_like_to">Would you like to</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_wish_to_change_this">Do you wish to change this?</string>
    <string name="please_specify_your_new_notification_change">Please specify your new Notification Change:</string>
    <string name="quantity">Quantity:</string>
    <string name="positive_num">positive num</string>
    <string name="metric">Metric:</string>
    <string name="before_after">Before/After:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="minutes_error_warning">Minutes cannot be set to more than 60, use hours instead!</string>
    <string name="hours_error_warning">Hours cannot be set to more than 23, use days instead!</string>
    <string name="days_error_warning">Days cannot be set to more than 6!</string>
    <string name="watch_ads_gain_points"><![CDATA[Watch Ads & gain points]]></string>
    <string name="join_discord">Join Discord</string>
</resources>