<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort_alphabetical"
        android:title="@string/a_z"
        android:checkable="true"/>

    <item
        android:id="@+id/sort_reverse_alphabetical"
        android:title="@string/z_a"
        android:checkable="true"/>

    <item
        android:id="@+id/sort_favourite_down"
        android:title="@string/favourite_up"
        android:checkable="true"/>

    <item
        android:id="@+id/sort_favourite_up"
        android:title="@string/favourite_down"
        android:checkable="true"/>

    <item
        android:id="@+id/sort_latest_release"
        android:title="@string/air_date_up"
        android:checkable="true"/>

    <item
        android:id="@+id/sort_oldest_release"
        android:title="@string/air_date_down"
        android:checkable="true"/>

    <item
        android:id="@+id/sort_latest_add"
        android:title="@string/add_date_up"
        android:checkable="true"/>

    <item
        android:id="@+id/sort_oldest_add"
        android:title="@string/add_date_down"
        android:checkable="true"/>

</menu>