<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/blue_with_rounded_corners">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_signal_wifi_off_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/no_internet_image"
        android:contentDescription="@string/no_internet" />

    <TextView
        android:id="@+id/no_connection_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/no_internet_image"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/no_internet_connection"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintTop_toBottomOf="@+id/no_connection_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:id="@+id/try_again_button"
        android:background="@drawable/vibrant_green_with_rounded_corners"/>


</androidx.constraintlayout.widget.ConstraintLayout>